# cpu-tuner

./: .gitignore  README.md  generate-icons.mjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  monitor.rs  power_plan.rs
src/components/CpuSettings/: index.tsx
src/components/Dashboard/: index.tsx
src/components/Layout/: Header.tsx  Sidebar.tsx
src/components/Monitor/: index.tsx
src/components/PowerPlans/: index.tsx
src/lib/: tauri.ts
src/stores/: appStore.ts
src/styles/: globals.css
